--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-animated": "^0.10.1",
+    "ember-animated-tools": "^0.4.1",
     "ember-auto-import": "^1.10.1",
     "ember-cli": "~3.25.3",
     "ember-cli-app-version": "^4.0.0",
