Adding configuration to enable running fastboot app on heroku

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint:hbs:fix": "ember-template-lint . --fix",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
-    "start": "ember serve",
+    "start": "node fastboot-server.js",
     "test": "npm-run-all lint test:*",
     "test:ember": "ember test"
   },
@@ -68,5 +68,9 @@
   },
   "ember": {
     "edition": "octane"
+  },
+  "dependencies": {
+    "ember-fetch": "^8.0.4",
+    "fastboot-app-server": "^3.0.0"
   }
 }
